 - Add new "modified date" field, hidden in form, to datasets. This is for dkan_harvest compatibility; saves sources dates into a separate field so they aren't affected by node changes. ODSM mappings also updated.


7.x-1.12.x
--------------------------
- Center group images in "Groups" page and group node page sidebar
- Add "2x" "3x" etc to datset teasers when more than one resource of a particular format present.
- Update the default jquery library setting from 1.7 to 1.10
- Fix topics menu and facet links if special characters are used in topic terms.
- Fix form redirect issues on dataset form validation


7.x-1.12.10 2016-09-07
--------------------------
 - Fix JS error on IE browsers preventing previews from appearing
 - Provide upgrade paths for older sites upgrading to newer BU editor config


7.x-1-12.9 2016-08-31
--------------------------
 - Fix data dictionary field to use html input format and improvements to the field's display and help text.
 - Update dkan_workflow content type legend to include all content types with correct icons.
 - Fix to new bug introduced in recline module in 1.12.7; previews would not display if file smaller than max preview size, even if loading from datastore.
 - Fix a problem with paths for image icons for topics. Uploaded image icons will now display correctly in the Topics menu.


7.x-1.12.8 2016-08-19
--------------------------
 - Patch panelizer module to correct bug introduced in previous release. See release notes for details.
 - Add validation to Group form to prevent duplicate groups from being created
 - Update and patch panels and panelizer to fix critical security issue. See release notes.
 - Patch panelizer module to correct bug introduced in previous release. See release notes.


7.x-1-12.7 2016-08-09
--------------------------
 - Update contrib modules uuid, services, manualcrop, markdown, panelizer, panopoly_widgets, panopoly_images